Book_insert updated

--- a/Myapp1/templates/book_list.html
+++ b/Myapp1/templates/book_list.html
@@ -6,7 +6,7 @@
 
 {% block content %}
     <h1>Books List</h1>
-    <a href="" class="btn btn-primary mb-3">Create New Book</a>
+    <a href="{% url 'book_create' %}" class="btn btn-primary mb-3">Create New Book</a>
     <table class="table table-striped">
         <thead>
             <tr>
