--- a/Myapp1/templates/book_list.html
+++ b/Myapp1/templates/book_list.html
@@ -23,7 +23,7 @@
                 <td>{{ book.published_date }}</td>
                 <td>{{ book.author.name }}</td>
                 <td>
-                    <a href="" class="btn btn-primary">Update</a>
+                    <a href="" class="btn btn-primary">Edit By Book</a>
                     <a href="{% url 'book_delete' id=book.id%}" class="btn btn-danger">Delete</a>
                 </td>
             </tr>
